app/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "stage.a3888s.test-danit.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-backend-service
                port:
                  number: 80
